fix (darkmode): fixed dark mode issues

--- a/src/app/body/milestone/milestone.component.css
+++ b/src/app/body/milestone/milestone.component.css
@@ -102,3 +102,18 @@ h3{
 .noMilstones{
     color: var(--text);
 }
+
+.dropdown-item {
+    font-size: 12px;
+    color: var(--text);
+}
+
+.dropdown-item:hover{
+    color: var(--button-text-hover);
+    background-color: var(--dropdown-hover);
+}
+
+#dropdownUserCard {
+    background-color: var(--dropdown-hover); 
+    border-color: var(--primary-color);
+}
