--- a/src/app/body/my-dashboard/my-tasks/my-tasks.component.css
+++ b/src/app/body/my-dashboard/my-tasks/my-tasks.component.css
@@ -23,3 +23,8 @@
     color: var(--text);
     border: none;
 }
+
+.card-body#pageSize{
+    background-color: var(--secondary-bg);
+    color: var(--text);
+}
