--- a/src/app/body/view-organization-details/view-organization-details.component.css
+++ b/src/app/body/view-organization-details/view-organization-details.component.css
@@ -74,3 +74,7 @@ hr {
     width: 122px;
     border-radius: 50%;
 }
+
+span{
+    color: var(--text);
+}
